--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gscan": "0.0.11",
     "html-to-text": "2.1.3",
     "image-size": "0.5.0",
+    "imgix": "0.0.2",
     "intl": "1.2.4",
     "intl-messageformat": "1.3.0",
     "jsonpath": "0.2.6",
