--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "express-hbs": "1.0.4",
     "extract-zip-fork": "1.5.1",
     "fs-extra": "2.0.0",
-    "ghost-editor": "0.1.10",
     "ghost-gql": "0.0.6",
     "ghost-ignition": "2.8.8",
     "glob": "5.0.15",
@@ -81,6 +80,7 @@
     "semver": "5.3.0",
     "showdown-ghost": "0.3.6",
     "simple-dom": "^0.3.2",
+    "simple-html-tokenizer": "^0.4.0",
     "superagent": "3.5.0",
     "unidecode": "0.1.8",
     "uuid": "3.0.0",
